[gd_scene load_steps=5 format=3 uid="uid://bcg0qpbcugib3"]

[ext_resource type="Script" uid="uid://dv0b7g6ehesq6" path="res://scripts/ui/resource_container.gd" id="1_vv3p0"]
[ext_resource type="Texture2D" uid="uid://bcikxyx1u82we" path="res://textures/ui/icons/wood.png" id="2_3ug3m"]
[ext_resource type="LabelSettings" uid="uid://cxnaajruiuyxf" path="res://presets/label_settings/resource.tres" id="3_vv3p0"]
[ext_resource type="Script" uid="uid://b1g6xk5hio7ty" path="res://scripts/ui/resource_text.gd" id="4_4girc"]

[node name="ResourceContainer" type="HBoxContainer"]
alignment = 1
script = ExtResource("1_vv3p0")
resource = "wood"
metadata/_custom_type_script = "uid://dv0b7g6ehesq6"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_3ug3m")
expand_mode = 2
stretch_mode = 5

[node name="ResourceText" type="Label" parent="."]
layout_mode = 2
text = "000"
label_settings = ExtResource("3_vv3p0")
script = ExtResource("4_4girc")
metadata/_custom_type_script = "uid://b1g6xk5hio7ty"

[node name="Spacer" type="Control" parent="."]
layout_mode = 2
