[gd_scene load_steps=8 format=3 uid="uid://bjlr2cljr2l4h"]

[ext_resource type="Script" uid="uid://dv0b7g6ehesq6" path="res://scripts/ui/resource_container.gd" id="1_him42"]
[ext_resource type="Texture2D" uid="uid://bcikxyx1u82we" path="res://textures/ui/icons/wood.png" id="2_rjxis"]
[ext_resource type="FontFile" uid="uid://dj425vssygri6" path="res://fonts/JuliaBlack-Medium.otf" id="3_rjxis"]
[ext_resource type="Script" uid="uid://b1g6xk5hio7ty" path="res://scripts/ui/resource_text.gd" id="4_xymaq"]
[ext_resource type="LabelSettings" uid="uid://hgr01p8su6yy" path="res://presets/label_settings/temp_resource.tres" id="5_rjxis"]

[sub_resource type="FontVariation" id="FontVariation_him42"]
base_font = ExtResource("3_rjxis")
variation_embolden = 0.5
spacing_glyph = 3
baseline_offset = 0.1

[sub_resource type="LabelSettings" id="LabelSettings_2ofrh"]
font = SubResource("FontVariation_him42")
font_size = 36
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 2)

[node name="ResourceContainerWithTemp" type="HBoxContainer"]
alignment = 1
script = ExtResource("1_him42")
resource = "wood"
metadata/_custom_type_script = "uid://dv0b7g6ehesq6"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_rjxis")
expand_mode = 2
stretch_mode = 5

[node name="ResourceText" type="Label" parent="."]
layout_mode = 2
text = "000"
label_settings = SubResource("LabelSettings_2ofrh")
script = ExtResource("4_xymaq")
metadata/_custom_type_script = "uid://b1g6xk5hio7ty"

[node name="ResourceTextTemp" type="Label" parent="."]
layout_mode = 2
text = "+0"
label_settings = ExtResource("5_rjxis")
script = ExtResource("4_xymaq")
is_temporary = true
metadata/_custom_type_script = "uid://b1g6xk5hio7ty"

[node name="Spacer" type="Control" parent="."]
layout_mode = 2
